--- a/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Index.cshtml
@@ -11,10 +11,10 @@
 @using (Html.BeginForm())
 {
 
-    @Html.Action("GridViewPartial_ciudad", new { IdProvincia = ViewBag.IdProvincia })
+    @Html.Action("GridViewPartial_ciudad", new { IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais });
 
     <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","Provincia",new { IdProvincia = ViewBag.IdProvincia, Area = "General" },null)">Volver</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Provincia",new {  IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais, Area = "General" },null)">Volver</a>
     </div>
 
 }
