--- a/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/_GridViewPartial_ciudad.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/_GridViewPartial_ciudad.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_Ciudad";
-        settings.CallbackRouteValues = new { Controller = "Ciudad", Action = "GridViewPartial_Ciudad" , IdProvincia = ViewBag.IdProvincia };
+        settings.CallbackRouteValues = new { Controller = "Ciudad", Action = "GridViewPartial_Ciudad" , IdProvincia = ViewBag.IdProvincia , IdPais = ViewBag.IdPais };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCiudad";
 
@@ -59,8 +59,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdProvincia = DataBinder.Eval(tc.DataItem, "IdProvincia"), IdCiudad = DataBinder.Eval(tc.DataItem, "IdCiudad") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdProvincia = DataBinder.Eval(tc.DataItem, "IdProvincia"), IdCiudad = DataBinder.Eval(tc.DataItem, "IdCiudad") },
+                Html.ActionLink("Modificar", "Modificar", new {  IdCiudad = DataBinder.Eval(tc.DataItem, "IdCiudad"), IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new {  IdCiudad = DataBinder.Eval(tc.DataItem, "IdCiudad"), IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -68,7 +68,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdProvincia = ViewBag.IdProvincia}).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -88,9 +88,11 @@
             {
                 Html.DevExpress().HyperLink(hyperlink =>
                 {
-                    var keyValue = DataBinder.Eval(container.DataItem, "IdProvincia");
+                    var IdPais = ViewBag.IdPais;
+                    var IdProvincia = DataBinder.Eval(container.DataItem, "IdProvincia");
+                    var IdCiudad = DataBinder.Eval(container.DataItem, "IdCiudad");
                     hyperlink.Properties.Text = "Parroquia";
-                    hyperlink.NavigateUrl = Url.Action("Index", "Parroquia", new { IdProvincia = keyValue });
+                    hyperlink.NavigateUrl = Url.Action("Index", "Parroquia", new {IdPais = IdPais, IdProvincia= IdProvincia, IdCiudad = IdCiudad });
                 }).Render();
             });
         });
