--- a/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Index.cshtml
@@ -11,10 +11,10 @@
 @using (Html.BeginForm())
 {
 
-    @Html.Action("GridViewPartial_parroquia", new { IdCiudad_Canton = ViewBag.IdCiudad_Canton })
+    @Html.Action("GridViewPartial_parroquia", new { IdCiudad_canton = ViewBag.IdCiudad_canton, IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais })
 
     <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","Ciudad",new { IdCiIdCiudad_Cantonudad = ViewBag.IdCiudad_Canton, Area = "General" },null)">Volver</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Ciudad",new { IdCiudad_canton = ViewBag.IdCiudad_canton, IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais, Area = "General" },null)">Volver</a>
     </div>
 
 }
