--- a/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Nuevo.cshtml
@@ -10,6 +10,7 @@
 
 @using (Html.BeginForm("Nuevo", "Parroquia", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdCiudad_Canton)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -21,35 +22,17 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdPais">Ciudad*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdCiudad_Canton, settings =>
-               {
-                   settings.Name = "IdCiudad";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdCiudad", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("Descripcion_Ciudad", "Provincia").Width = System.Web.UI.WebControls.Unit.Percentage(90);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdCiudad";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "Descripcion_Ciudad";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_ciudades).GetHtml()
+                    <label for="IdCiudad_Canton">Ciudad*</label>
+                    @Html.DropDownListFor(q => q.IdCiudad_Canton, new SelectList(ViewBag.lst_ciudades, "IdCiudad", "Descripcion_ciudad"), new { @class = "form-control", @disabled= "disabled" })
                     @Html.ValidationMessageFor(q => q.IdCiudad_Canton, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
-
-
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -61,11 +44,9 @@
             </div>
         </div>
     </div>
-
-
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Parroquia",new {IdCiudad_Canton = Model.IdCiudad_Canton, Area = "General" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Parroquia",new {IdCiudad = Model.IdCiudad_Canton, Area = "General" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
