--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Anular.cshtml
@@ -30,7 +30,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdPais">País</label>
-                    @Html.DropDownListFor(q => q.IdPais, new SelectList(ViewBag.lst_pais, "IdPais", "Nombre"), new { @class = "form-control" })
+                    @Html.DropDownListFor(q => q.IdPais, new SelectList(ViewBag.lst_pais, "IdPais", "Nombre"), new { @class = "form-control", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.IdPais, "", new { @class = "text-danger" })
                 </div>
             </div>
