--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Modificar.cshtml
@@ -30,7 +30,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdPais">País</label>
-                    @Html.DropDownListFor(q => q.IdPais, new SelectList(ViewBag.lst_pais, "IdPais", "Nombre"), new { @class = "form-control" })
+                    @Html.DropDownListFor(q => q.IdPais, new SelectList(ViewBag.lst_pais, "IdPais", "Nombre"), new { @class = "form-control", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.IdPais, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -63,7 +63,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Provincia", new {IdPais = ViewBag.IdPais, Area = "General" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Provincia", new {IdPais = Model.IdPais, Area = "General" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
