--- a/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Modificar.cshtml
@@ -29,7 +29,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdProvincia">Provincia*</label>
-                    @Html.DropDownListFor(q => q.IdProvincia, new SelectList(ViewBag.lst_provincia, "IdProvincia", "Descripcion_prov"), new { @class = "form-control", @disabled = "disabled" })
+                    @Html.DropDownListFor(q => q.IdProvincia, new SelectList(ViewBag.lst_provincia, "IdProvincia", "Descripcion_Prov"), new { @class = "form-control", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.IdProvincia, "", new { @class = "text-danger" })
                 </div>
             </div>
