--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Nuevo.cshtml
@@ -117,7 +117,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="tr_Observacion">Observación</label>
-                    @Html.TextAreaFor(q => q.tr_Observacion, new { @class = "form-control", @rows = 3 })
+                    @Html.TextAreaFor(q => q.tr_Observacion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.tr_Observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
