--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
@@ -31,10 +31,10 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdCtaCble"] = null;
+            e.NewValues["IdPersona"] = 0;
             e.NewValues["dc_Valor_debe"] = 0;
-            e.NewValues["dc_Valor_haber"] = 0;
-            e.NewValues["dc_para_conciliar"] = false;
+            e.NewValues["Fecha"] = DateTime.Now.Date;
+            e.NewValues["Valor"] = 0;
         };
 
         settings.Columns.Add(column =>
